activity 4 (places travelled added)

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
       </li>
 
       <li class="bold">
+        <!--
+        ICONS:
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#places" class="waves-effect waves-dark teal-text"><i
+            class="mdi-av-web small"></i><span>Places Travelled</span></a>
+      </li>
+
+      <li class="bold">
         <!-- 
         1. mdi-communication-contacts
         2. mdi-content-mail
@@ -125,6 +133,7 @@
         <a aria-label="Open Petar's resume in a new tab" href="https://przuljpe.github.io/assets/resume/Petar_Przulj_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
+      
     </ul>
   </nav>
 
@@ -163,6 +172,12 @@
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
+
+      <li class="bold">
+        <a aria-label="Navigate to the Education section" href="#places" class="waves-effect waves-dark teal-text"><i
+            class="mdi-av-web small"></i><span>Places Travelled</span></a>
+      </li>
+
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
@@ -601,6 +616,13 @@
 
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="places" class="section scrollspy"></section>
+      <h3 class="page-title white-text teal">Places Travelled</h3>
+      <div class="container flow-text">    
+        <iframe id="map" src="https://www.google.com/maps/d/embed?mid=1QVdq3SiLKeMg8Y5s4EICOmYenl6sIwA&ehbc=2E312F" width="100%" height="50%"></iframe>
       </div>
     </section>
 
